--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,168 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-form {
+body {
+  background: #4158d0 linear-gradient(43deg, #4158d0, #c850c0, #ffcc70) no-repeat;
+  background-size: 100% 100vh;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.multi-step-form {
+  margin: 10vh auto;
+  position: relative;
+  width: 100%;
   max-width: 300px;
-  margin: 0 auto;
 }
 
-.card {
+.multi-step-form .card {
+  box-shadow: 0 0 15px #00000075;
+  max-width: 300px;
   background-color: white;
-  border: 1px solid #333;
+  border: 1px solid #3333336b;
   border-radius: 0.5rem;
-  padding: 0.5rem;
-  max-width: 300px;
+  padding: 1rem;
   margin: 0 auto;
-  display: none;
+  animation: fade 166.66667ms ease-in-out forwards;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  text-align: center;
 }
 
-.card.active {
-  display: block;
+.multi-step-form .card.active {
+  position: static;
+  animation: slide 500ms ease-in-out forwards;
 }
 
-.form-group {
+.multi-step-form .card .form-group {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
   margin: 0 0 0.5rem;
+  text-align: left;
 }
 
-.form-group .step-title {
+.multi-step-form .card .form-group .step-title {
   text-align: center;
   margin: 0 0 1rem 0;
   font-weight: bold;
 }
 
-.form-group label {
+.multi-step-form .card .form-group label {
   font-weight: bold;
   font-size: 0.8rem;
   color: #333;
 }
 
-.form-group input {
-  border: 1px solid #333;
+.multi-step-form .card .form-group input {
+  border: 1px solid rgba(51, 51, 51, 0.4);
   border-radius: 0.25rem;
   font-size: 1rem;
   padding: 0.25rem;
 }
 
-.form-group :last-child {
+.multi-step-form .card .form-group :last-child {
   margin: 0;
+}
+
+.multi-step-form .card button {
+  padding: 10px;
+  background-color: green;
+  border: 1px solid rgba(128, 128, 128, 0.45);
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25vw;
+}
+
+.progress-bar .step {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+
+.progress-bar .step p:first-of-type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
+  position: relative;
+  mix-blend-mode: lighten;
+}
+
+.progress-bar .step .connection {
+  position: absolute;
+  left: 0;
+  transform: translate(-100%);
+  width: calc(25vw + 70px);
+  height: 3px;
+  background-color: white;
+}
+
+.progress-bar .step.active-step p:first-of-type {
+  mix-blend-mode: unset;
+  color: white;
+  background: green;
+}
+
+.progress-bar .step.active-step p:first-of-type span {
+  background: green;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(200%);
+  }
+  80% {
+    transform: translateX(-20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fade {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .progress-bar {
+    gap: 3vw;
+  }
+  .progress-bar .step {
+    width: 100px;
+    text-align: center;
+  }
+  .progress-bar .step p:first-of-type .connection {
+    width: calc(3vw + 60px);
+  }
 }
 /*# sourceMappingURL=styles.css.map */
