--- a/styles.scss
+++ b/styles.scss
@@ -1,48 +1,184 @@
 * {
   box-sizing: border-box;
-}
-form {
-  max-width: 300px;
-  margin: 0 auto;
-}
-.card {
-  background-color: white;
-  border: 1px solid #333;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  max-width: 300px;
-  margin: 0 auto;
-  display: none;
-  &.active {
-    display: block;
-  }
+  padding: 0;
+  margin: 0;
 }
 
-.form-group {
+@mixin flex-properties {
   display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-  margin: 0 0 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
 
-  .step-title {
+body {
+  background: #4158d0 linear-gradient(43deg, #4158d0, #c850c0, #ffcc70)
+    no-repeat;
+  background-size: 100% 100vh;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+$transition: 500ms;
+$quick-transition: $transition / 3;
+
+.multi-step-form {
+  margin: 10vh auto;
+  // overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+
+  .card {
+    box-shadow: 0 0 15px #00000075;
+    max-width: 300px;
+    background-color: white;
+    border: 1px solid #3333336b;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin: 0 auto;
+    animation: fade $quick-transition ease-in-out forwards;
+    // display: none;
+    // transform: translateX(200%);
+    // opacity: 0;
+    // transition: $transition ease-in-out;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
     text-align: center;
-    margin: 0 0 1rem 0;
-    font-weight: bold;
-  }
 
-  label {
-    font-weight: bold;
-    font-size: 0.8rem;
-    color: #333;
-  }
+    &.active {
+      // display: block;
+      position: static;
+      // transform: translateX(0);
+      // opacity: 1;
+      // transition-delay: $transition;
 
-  input {
-    border: 1px solid #333;
-    border-radius: 0.25rem;
-    font-size: 1rem;
-    padding: 0.25rem;
+      animation: slide $transition ease-in-out forwards;
+    }
+
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+      margin: 0 0 0.5rem;
+      text-align: left;
+
+      .step-title {
+        text-align: center;
+        margin: 0 0 1rem 0;
+        font-weight: bold;
+      }
+
+      label {
+        font-weight: bold;
+        font-size: 0.8rem;
+        color: #333;
+      }
+
+      input {
+        border: 1px solid rgba(51, 51, 51, 0.4);
+        border-radius: 0.25rem;
+        font-size: 1rem;
+        padding: 0.25rem;
+      }
+      :last-child {
+        margin: 0;
+      }
+    }
+    button {
+      padding: 10px;
+      background-color: green;
+      border: 1px solid rgba(128, 128, 128, 0.45);
+      color: white;
+      border-radius: 5px;
+      text-align: center;
+      margin-top: 10px;
+    }
   }
-  :last-child {
-    margin: 0;
+}
+
+.progress-bar {
+  margin: 20px 0;
+  @include flex-properties();
+  gap: 25vw;
+
+  .step {
+    @include flex-properties();
+    color: white;
+    flex-direction: column;
+    flex-shrink: 0;
+
+    p:first-of-type {
+      @include flex-properties();
+      $square: 40px;
+      width: $square;
+      height: $square;
+      color: black;
+      background-color: white;
+      border-radius: 5px;
+      position: relative;
+      mix-blend-mode: lighten;
+    }
+
+    .connection {
+      position: absolute;
+      left: 0;
+
+      transform: translate(-100%);
+      width: calc(25vw + 70px);
+      height: 3px;
+      background-color: white;
+    }
+    &.active-step {
+      p:first-of-type {
+        mix-blend-mode: unset;
+        color: white;
+        background: green;
+
+        span {
+          background: green;
+        }
+      }
+    }
+  }
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(200%);
+  }
+  80% {
+    transform: translateX(-20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes fade {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.75);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .progress-bar {
+    gap: 3vw;
+    .step {
+      width: 100px;
+      text-align: center;
+      p:first-of-type {
+        .connection {
+          width: calc(3vw + 60px);
+        }
+      }
+    }
   }
 }
